# bb-common-utils

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: merge_gate.yaml
logging/: CMakeLists.txt
logging/include/: logger_context.hpp  logger_instance.hpp
logging/src/: logger_adapter.hpp  logger_adapter_console.cpp  logger_adapter_dlt.cpp  logger_context.cpp  logger_instance.cpp
scripts/: format-checker.sh  lint-checker.sh
